# computational_maths

./: CMakeLists.txt  README.txt
prj.cw/: CMakeLists.txt
prj.cw/matrixvs/: CMakeLists.txt  matrixvs.cpp  matrixvs.h
prj.cw/numerical_methods/: CMakeLists.txt  n_m.cpp  n_m.h
prj.cw/tests/: CMakeLists.txt  doctest_n_m.cpp  functions.cpp
